0.39
- Added favicon to show thread has unread replies
- Added button next to autoupdate countdown to update now

0.38
- New post counter now counts down read posts rather than resetting
- Fixed empty OP threads having the wrong title

0.37
- Added Clear quick reply keybind (Ctrl+L)
- Updated timezone setting on new posts

0.36
- Fixed script not starting in some threads

0.35
- Changed thumbnail remove method from middle click to shift+click

0.34
- Reverted new post counter showing 0
- Save image link now saves as original filename

0.33
- Renamed "Download" image link to "Save" image link
- Save image link now starts a download
- Added Check for update link in options
- Added Automatically check for updates option

0.32
- Added OP info to page title
- Fixed backlink hover previews

0.31
- Fixed posting aborted message
- Fixed autoupdating stopping after an error

0.30
- Improved start up time
- Increased space between backlinks
- Fixed 404 errors not being shown
- New post counter shows 0 when no new posts

0.29
- Added file size and type warnings to quick reply
- Removed lunachan support
- Changed icon
- Changed description

0.28
- Added Reset quick reply option

0.27
- Fixed inline posts and hide post buttons on /all/
- Added border to inline OP posts

0.26
- Fixed quick reply always reappearing on refresh
- Added queued images counter to quick reply

0.25
- Added support thread link to options panel
- Fixed board expanded threads not parsing
- Added individual options for each keybind

0.24
- Fixed quick reply showing on read-only pages
- Added NSFW and No File checkboxes to quick reply

0.23
- Changed hidden posts to show names beside the hide post button
- Updated Settings panel CSS to match updated Left Bar
- Updated quick reply mod panel
- Added new quick reply embed options
- Fixed Retry error after having a thread open for a long time