@@ -1,3 +1,7 @@
+files
+- Clear quick reply keybind now removes selected image
+- Adding more images will no longer clear existing queue
+
 0.39
 - Added favicon to show thread has unread replies
 - Added button next to autoupdate countdown to update now
